--- a/src/components/common/button/button.module.scss
+++ b/src/components/common/button/button.module.scss
@@ -15,6 +15,7 @@
   color: white;
   font-size: 1.1em;
   font-weight: 700;
+  margin-top: 20px;
 
   @include breakpoint() {
     left: 10%;
@@ -30,4 +31,16 @@
   color: #fff;
   font-weight: 700;
   font-size: 1rem;
+}
+
+.btnThird {
+  width: 150px;
+  height: 40px;
+  border: none;
+  margin: 10px auto;
+  border-radius: 25px;
+  background-color: hsl(180, 66%, 49%);
+  color: white;
+  font-size: 1.1em;
+  font-weight: 700;
 }
